MEM-147: Fix username alignment when message text is defined

--- a/apps/memspace-web/src/components/SpaceMemberListingItem/SpaceMemberListingItem.module.css
+++ b/apps/memspace-web/src/components/SpaceMemberListingItem/SpaceMemberListingItem.module.css
@@ -8,11 +8,6 @@
   max-height: 200px;
 }
 
-.usernameLine {
-  font-weight: bold;
-  display: flex;
-}
-
 .channelLink {
   display: flex;
   align-items: center;
